Updated link to repo for website

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
            <p>Coming soon!</p>
         </div>
         <footer class="pb-8">
-          <small>This website is my own work, built with Vite and DaisyUI. You are welcome to fork and use it on <a href="https://github.com" target="_blank">GitHub</a>.</small>
+          <small>This website is my own work, built with Vite and DaisyUI. You are welcome to fork and use it on <a href="https://github.com/dillondesilva/personalwebsite" target="_blank">GitHub</a>.</small>
         </footer>
       </div>
     </div>
