Updated with link to article

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
           <!-- Projects/Other Experience accordion -->
            <h4>Articles</h4>
            <div style="border-bottom: 0.75px solid; margin: 0;"></div>
-           <p>Coming soon!</p>
+           <div style="margin-top: 10px;"></div>
+           <a href="https://medium.com/@dillondesilva/building-local-lm-desktop-applications-with-tauri-f54c628b13d9" target="_blank" style="font-weight: bold; text-decoration: underline;">Building Local LM Desktop Applications with Tauri</a>
         </div>
         <footer class="pb-8">
           <small>This website is my own work, built with Vite and DaisyUI. You are welcome to fork and use it on <a href="https://github.com/dillondesilva/personalwebsite" target="_blank">GitHub</a>.</small>
